# GovTrack

./: .env.example  .gitignore  .pre-commit-config.yaml  CLAUDE.md  README.md  SUBMISSION_READY.md
backend/: .dockerignore  .env.example  Dockerfile  alembic.ini  pyproject.toml
backend/migrations/: env.py
backend/migrations/versions/: 0001_initial.py  0002_audit_indexes.py  0003_revoked_tokens.py  0004_consent_log.py  0005_dispatch_log.py
backend/scripts/: test_agent_streaming.py  test_assistant.py  test_documents_extract.py  test_qwen_streaming.py
backend/src/: auth.py  config.py  database.py  logging_config.py  main.py  metrics.py  telemetry.py
backend/src/agents/: __init__.py  base.py  llm_cache.py  mcp_server.py  orchestrator.py  pii_filters.py  profile.py  public_tools.py  qwen_client.py  streaming.py
backend/src/agents/implementations/: __init__.py  assistant_agent.py  classifier.py  compliance.py  consult.py  dispatch_router.py  doc_analyzer.py  drafter.py  intake.py  legal_lookup.py  planner.py  router.py  security_officer.py  summarizer.py
backend/src/agents/profiles/: classifier_agent.yaml  compliance_agent.yaml  consult_agent.yaml  dispatch_router_agent.yaml  doc_analyze_agent.yaml  draft_agent.yaml  gap_agent.yaml  intake_agent.yaml  legal_search_agent.yaml  planner_agent.yaml  router_agent.yaml  security_officer_agent.yaml  summary_agent.yaml
backend/src/api/: agents.py  assistant.py  audit.py  auth_login.py  cases.py  data_subject.py  demo.py  documents.py  graph.py  leadership.py  notifications.py  permission_demo.py  public.py  search.py  ws.py
backend/src/graph/: __init__.py  audit.py  deps.py  permitted_client.py  property_mask.py  rbac_simulator.py  sdk_guard.py  templates.py
backend/src/middleware/: __init__.py  rate_limit.py  request_context.py
backend/src/models/: chat_schemas.py  enums.py  schemas.py
backend/src/services/: activity_broadcaster.py  chat_service.py  content_filter.py  oss_service.py  rate_limiter.py
backend/tests/: conftest.py  test_agent_benchmarks.py  test_auth.py  test_compliance_score.py  test_consult_submit.py  test_data_subject.py  test_demo_reliability.py  test_dispatch_router.py  test_drafter_signature.py  test_e2e_tthc.py  test_gremlin_injection.py  test_legal_lookup_repealed.py  test_logging.py  test_oss_sts.py  test_permission_negative.py  test_permissions.py  test_pii_filters.py  test_planner_dag.py  test_qwen_retry.py  test_rate_limit.py  test_request_id.py  test_router_idempotent.py  test_security_headers.py  test_security_officer_no_downgrade.py  test_sentry_scrub.py  test_wave1_correctness.py  test_websocket.py
data/: .gitignore
docs/: PRODUCTION.md  README.md  devpost-submission.md
frontend/: .dockerignore  .env.example  Dockerfile  instrumentation-client.ts  instrumentation.ts  next.config.ts  package-lock.json  package.json  playwright.config.ts  sentry.edge.config.ts  sentry.server.config.ts  tsconfig.tsbuildinfo
infra/: docker-compose.prod.yml  docker-compose.yml
scripts/: create_gdb_edges.py  create_gdb_schema.py  (+20 more)
(+294 files in other folders)
