[project]
name = "govflow-backend"
version = "0.1.0"
description = "GovFlow Agentic GraphRAG Backend"
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.34.0",
    "pydantic>=2.0",
    "pydantic-settings>=2.0",
    "gremlinpython>=3.7.0",
    "openai>=1.0",
    "oss2>=2.18",
    "asyncpg>=0.30.0",
    "websockets>=14.0",
    "python-jose[cryptography]>=3.3",
    "slowapi>=0.1.9",
    "pyyaml>=6.0",
    "httpx>=0.28.0",
    "jinja2>=3.1",
    "python-multipart>=0.0.18",
    "aiofiles>=24.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.25",
    "httpx>=0.28",
    "ruff>=0.9",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src"]

[tool.ruff]
target-version = "py311"
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "I", "UP"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
